# paketti-tracker

./: .gitignore  AGENTS.md  README.md  hacs.json  pyproject.toml  release.sh  repository.yaml
addon/: Dockerfile  build.yaml  config.yaml  requirements.txt  run.sh
addon/app/: config.py  database.py  main.py  models.py
addon/app/db/: models.py  repository.py  settings_repository.py
addon/app/email/: client.py  parser.py
addon/app/routers/: email.py  packages.py  settings.py
addon/app/scrapers/: base.py  factory.py  posti.py
addon/app/services/: email_service.py  mqtt_service.py  notification_checker.py  notify_service.py  scraper_service.py
addon/frontend/: index.html  package-lock.json  package.json  vite.config.ts
addon/frontend/src/: api.ts  main.tsx  types.ts
custom_components/paketti_tracker/: __init__.py  config_flow.py  const.py  coordinator.py  email_client.py  email_coordinator.py  email_parser.py  manifest.json  models.py  notifications.py  panel.py  sensor.py  websocket_api.py
custom_components/paketti_tracker/frontend/: package-lock.json  package.json  vite.config.ts
custom_components/paketti_tracker/scrapers/: __init__.py  base.py  matkahuolto.py  posti.py  postnord.py
custom_components/paketti_tracker/translations/: en.json
openspec/: config.yaml
openspec/specs/addon-infrastructure/: spec.md
openspec/specs/database/: spec.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_email.py  test_notifications.py  test_posti_scraper.py  test_scraper_factory.py  test_sensor.py  test_websocket_api.py
tests/addon/: __init__.py  conftest.py  test_email_service.py  test_mqtt_service.py  test_notify_service.py  test_packages_api.py  test_posti_scraper.py  test_repository.py  test_scraper_service.py  test_settings_api.py
(+86 files in other folders)
